--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,6 @@ jobs:
           name: Check Formatting
           command: |
               rustup component add rustfmt
-              rustup component add miri-preview
               rustfmt --version
               cargo fmt --all -- --check --color=auto
       - run:
@@ -30,7 +29,9 @@ jobs:
           command: cargo test --all
       - run:
           name: Run miri tests
-          command: rustup +nightly cargo miri test --all
+          command: |
+              rustup +nightly component add miri-preview
+              rustup +nightly cargo miri test --all
       - save_cache:
           paths:
             - /usr/local/cargo/registry
