--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,8 +30,8 @@ jobs:
       - run:
           name: Run miri tests
           command: |
-              rustup +nightly component add miri-preview
-              rustup +nightly cargo miri test --all
+              rustup component add --toolchain nightly miri-preview
+              rustup run nightly cargo miri test --all
       - save_cache:
           paths:
             - /usr/local/cargo/registry
