--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,12 +30,12 @@ jobs:
       - run:
           name: Run all tests under miri
           command: |
-              rustup toolchain install --force nightly -c miri
+              rustup toolchain install nightly -c miri
               rustup run nightly cargo miri test
       - run:
           name: Run all tests under sanitizers
           command: |
-              rustup toolchain install --force nightly
+              rustup toolchain install nightly
               RUSTFLAGS="-Z sanitizer=address" cargo +nightly test --target x86_64-unknown-linux-gnu
               RUSTFLAGS="-Z sanitizer=leak" cargo +nightly test --target x86_64-unknown-linux-gnu
               # Appears to be blocked on https://github.com/rust-lang/rust/issues/39610
