--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,9 @@ license = "MIT OR Apache-2.0"
 [badges]
 circle-ci = { repository = "kyren/hashlink", branch = "master" }
 
+[features]
+serde_impl = ["serde"]
+
 [dependencies]
 hashbrown = "0.8.0"
+serde = { version = "1.0", optional = true }
