--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ serde_impl = ["serde"]
 [dependencies]
 hashbrown = "0.8.0"
 serde = { version = "1.0", optional = true }
+
+[dev-dependencies]
+serde_test = "1.0"
