--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,17 +35,17 @@ jobs:
           command: cargo build --all --all-targets
       - run:
           name: Run all tests
-          command: cargo test --all
+          command: cargo test --all --all-features
       - run:
           name: Run all tests under miri
           command: |
-            cargo +nightly miri test
+            cargo +nightly miri test --all-features
       - run:
           name: Run all tests under sanitizers
           command: |
-            RUSTFLAGS="-Z sanitizer=address" cargo +nightly -Z build-std test --target x86_64-unknown-linux-gnu
-            RUSTFLAGS="-Z sanitizer=leak" cargo +nightly test -Z build-std --target x86_64-unknown-linux-gnu
-            RUSTFLAGS="-Z sanitizer=memory" cargo +nightly test -Z build-std --target x86_64-unknown-linux-gnu
+            RUSTFLAGS="-Z sanitizer=address" cargo +nightly -Z build-std test --target x86_64-unknown-linux-gnu --all-features
+            RUSTFLAGS="-Z sanitizer=leak" cargo +nightly test -Z build-std --target x86_64-unknown-linux-gnu --all-features
+            RUSTFLAGS="-Z sanitizer=memory" cargo +nightly test -Z build-std --target x86_64-unknown-linux-gnu --all-features
       - save_cache:
           paths:
             - /usr/local/cargo/registry
