--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ documentation = "https://docs.rs/hashlink"
 readme = "README.md"
 keywords = ["data-structures"]
 license = "MIT OR Apache-2.0"
+rust-version = "1.61.0"
 
 [badges]
 circle-ci = { repository = "kyren/hashlink", branch = "master" }
@@ -17,7 +18,7 @@ circle-ci = { repository = "kyren/hashlink", branch = "master" }
 serde_impl = ["serde"]
 
 [dependencies]
-hashbrown = "0.12.0"
+hashbrown = "0.13.1"
 serde = { version = "1.0", optional = true }
 
 [dev-dependencies]
