--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ description = "HashMap-like containers that hold their key-value pairs in a user
 repository = "https://github.com/kyren/hashlink"
 documentation = "https://docs.rs/hashlink"
 readme = "README.md"
-keywords = ["data-structures"]
+keywords = ["data-structures", "no_std"]
 license = "MIT OR Apache-2.0"
 
 [badges]
@@ -18,7 +18,7 @@ serde_impl = ["serde"]
 
 [dependencies]
 hashbrown = "0.14"
-serde = { version = "1.0", optional = true }
+serde = { version = "1.0", default_features = false, optional = true }
 
 [dev-dependencies]
 serde_test = "1.0"
