--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ circle-ci = { repository = "kyren/hashlink", branch = "master" }
 serde_impl = ["serde"]
 
 [dependencies]
-hashbrown = "0.14.3"
+hashbrown = { version = "0.14.3", default-features = false, features = ["ahash", "inline-more"] }
 serde = { version = "1.0", default-features = false, optional = true }
 
 [dev-dependencies]
