Set rust-version in Cargo metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ documentation = "https://docs.rs/hashlink"
 readme = "README.md"
 keywords = ["data-structures", "no_std"]
 license = "MIT OR Apache-2.0"
+rust-version = "1.65"
 
 [badges]
 circle-ci = { repository = "kyren/hashlink", branch = "master" }
